# hwcinstr

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cfe/: CFEContext.cpp  CFEContext.h  CMakeLists.txt  ClangPlugin.cpp  ConvertConstants.cpp  ConvertConstants.h  ConvertTypes.h  GenerateSymbolsPass.cpp  GenerateWrappersPass.cpp
common/: API.h  Conf.cpp  Conf.h  Formatting.cpp  Formatting.h  PAPIContext.cpp  PAPIContext.h  SymbolNames.cpp  SymbolNames.h  Types.h
drivers/: CMakeLists.txt  hwc++.in  hwcc.in
rt/: API.cpp  CMakeLists.txt  FunctionStats.cpp  FunctionStats.h  RTContext.cpp  RTContext.h  RegionStats.cpp  RegionStats.h  Stats.cpp  Stats.h
sample/: hwcconf.yaml
