configure_file(hwcc.in ${CMAKE_CURRENT_BINARY_DIR}/hwcc @ONLY)
configure_file(hwc++.in ${CMAKE_CURRENT_BINARY_DIR}/hwc++ @ONLY)

file(COPY ${CMAKE_CURRENT_BINARY_DIR}/hwcc ${CMAKE_CURRENT_BINARY_DIR}/hwc++
  DESTINATION ${CMAKE_PROJECT_BINDIR}
  FILE_PERMISSIONS
  OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE)

install(FILES
  ${CMAKE_PROJECT_BINDIR}/hwcc ${CMAKE_PROJECT_BINDIR}/hwc++
  DESTINATION bin
  PERMISSIONS
  OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE)
